--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0",
     "timeago-react": "^3.0.3"
   },
